--- a/assets/styles.css
+++ b/assets/styles.css
@@ -39,7 +39,9 @@ body {
     border: 2px solid #d8d8d8;
     border-radius: 50%;
   }
-  
+  .displayNone{
+    display: none;
+  }
   
   .disabledButton {
     background-color: #d8d8d8;
